--- a/templates/level.html
+++ b/templates/level.html
@@ -92,7 +92,7 @@
             <form method="POST" action="{{ url_for('submit_answer') }}" class="flex-grow-1 mr-2">
                 <div class="form-row">
                     <div class="col">
-                      <input type="text" class="form-control" name="user_answer" placeholder="Enter your answer" required>
+                      <input type="text" class="form-control" name="user_answer" placeholder="Enter your answer" required autocomplete="off">
                     </div>
                     <div class="col">
                         <button type="submit" class="btn btn-primary btn-block">Submit</button>
