fix: update success message and enable HTML in modal
* Update level 2 success message to be more accurate about model duping
* Enable HTML rendering in success modal message using Jinja's safe filter

The success message now better reflects how the user bypassed protections
through indirect methods rather than implying violation of system prompts.
HTML tags in messages will now render properly in the modal.

--- a/templates/level.html
+++ b/templates/level.html
@@ -112,7 +112,7 @@
                     <h5 class="modal-title" id="successModalLabel">{{ success_info.title }}</h5>
                 </div>
                 <div class="modal-body">
-                    <p>{{ success_info.message }}</p>
+                    <p>{{ success_info.message | safe }}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success-modal" id="continueToNextLevel">Continue</button>
